# DRSearch

./: .cursorignore  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.backend  LICENSE  PR_DESCRIPTION.md  README.md  SCHEMA_SUMMARY.md  docker-compose.fullapp.yml  docker-compose.init.yml  docker-compose.yml  drsearch_backend_API_Schema.json  report_root_cause_corrective_action.md  setup.sh  setup_cursor_background_agent_env.sh  simulator.py  weaviate_schema.json
.cursor/: environment.json
.devcontainer/: devcontainer.json
agentic_drsearch_backend/: .example.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agentic_drsearch_backend/app/: __init__.py  config.py  database.py  logging.py  main.py
agentic_drsearch_backend/app/agents/: agent.py  tools.py
agentic_drsearch_backend/app/api/: deps.py  schema.py
agentic_drsearch_backend/app/api/v1/: routes.py
agentic_drsearch_backend/app/ingestion/: ingest.py
agentic_drsearch_backend/app/models/: document.py
agentic_drsearch_backend/app/rag_agents/: agent.py  tools.py
agentic_drsearch_backend/scripts/: init_db.sql
agentic_drsearch_backend/tests/: test_api.py
app/: System_Prompts.py  index_config.py  index_options.py
blob_app/: README.md  app.py  pyproject.toml  requirements.txt
codex_environment_setup_scripts/: fake_document_chunks.json  install_pgvector.sh  install_pgvector_cursor_background_agent_env.sh  load_pgvector_data.sh  pgvector_testing.md  run_backend_tests.sh  test_backend.sh
common_lib/: sqlite_manager.md  weaviate_recordmanager_utils.md
docextract/: .example.env  Acronym_Tools.py  Dockerfile.ingest  ExtendedSQLRecordManager4.py  HTML_Processing.py  POSTgresql_connect_test.py  README.md  Weaviate_Schema.py  code_files.md  docker-compose.ingest.yml  document_processor.py  ingest_docs.py  ingestion_utilities.py  main.py  partition_pdf_and_docx_Final5.py  pyproject.toml  requirements.txt  run_ingest.py  vector_store.py
docextract/Modified_Unstructured_Library_Files/: file_download.py  tables.py
docextract/static/: index.html
docextract/tests/: test_vector_store.py
docs/: acronym_handling.md  backend-compatibility-checklist.md  backend-compatibility-contract.md  e2e_testing.md  sidebar.md  weaviate_schema.json  weaviate_schema_usage.md
drsearch_backend/: .dockerignore  .example.env  .pylintrc  Delete_doc_records_table_and_create_a_new_table.sql  Dockerfile.backend  Makefile  README.md  docker-compose.backend.yml  pyproject.toml
drsearch_backend/app/: System_Prompts.py  __init__.py  acronyms_keys_to_ignore.json  chat_chain.py  index_config.py  index_options.py  main.py  warmup.py
drsearch_backend/app/agent/: rag_agent.py
drsearch_backend/app/api/v1/: agent_routes.py  routes.py
drsearch_backend/app/auth/: jwt.py  middleware.py
drsearch_backend/app/azure_search_blob_manager/: AzureBlobStorageWrapperAsync.py
drsearch_backend/app/chain/: agent_engine.py  api.py  chain-overview.md  cli.py  embeddings.py  engine.py  exceptions.py  formatter.py  history.py  mapping.py  models.py  retriever.py
drsearch_backend/app/core/: blob_loader.py  chain_config.py  config.py  logging.py  logging_middleware.py
drsearch_backend/app/models/: __init__.py  agent.py  blob.py  blob_storage.py  chat.py  feedback.py  logging.py  shared.py  trace.py
drsearch_backend/app/reference_docs_mappings/: JACSKE_PROD_DEPLOY.csv
drsearch_backend/app/search_agent/: agent.py  tools.py
drsearch_backend/app/vector_store/: __init__.py  base.py  factory.py  pgvector_store.py  weaviate_store.py
drsearch_backend/app/vectorstores/: __init__.py  azure_store.py  factory.py  pgvector_store.py  retriever_wrappers.py  weaviate_store.py
drsearch_backend/app_logs/: drsearch_backend_log.jsonl  feedback.jsonl
drsearch_backend/codex_environment_setup_scripts/: README.txt  load_pgvector_data.ps1  load_pgvector_data.sh  test_backend.sh
drsearch_backend/docs/: chain-overview.md
drsearch_backend/drsearch_backend/: __init__.py
drsearch_backend/scripts/: create_azure_index.py  create_mapping_table.py  create_pgvector_index.py  debug_weaviate_transfer.py  pgvector_cli.py  transfer_weaviate_to_pgvector.py  weaviate_schema.json
drsearch_backend/testing_full_app/: simulator.py
drsearch_backend/tests/: conftest.py  test_agent_api.py  test_agent_routes.py  test_agentic_mode.py  test_api_interface_schema.py  test_api_routes.py  test_api_routes_extra.py  test_app.py  test_auth_middleware.py  test_blob_loader.py  test_blob_wrapper_async.py  test_chain_api.py  test_chat_endpoints.py  test_chat_engine.py  test_document_formatter.py  test_document_processor_new.py  test_embedding_factory.py  test_embeddings_async.py  test_extra_coverage.py  test_history_serializer.py  test_index_options.py  test_jwt_helpers.py  test_langfuse_handler.py  test_logging.py  test_logging_extra.py  test_main.py  test_part_number_mapping.py  test_pgvector_store.py  test_pgvector_store_extra.py  test_retriever_factory.py  test_vector_store_factory.py  test_warmup.py
drsearch_backend_lg/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
drsearch_backend_lg/app/: config.py  database.py  main.py
drsearch_backend_lg/app/models/: chat.py  documents.py
drsearch_backend_lg/app/routers/: __init__.py  chat.py  documents.py
drsearch_backend_lg/app/services/: rag_agent.py  session_manager.py  vector_store.py
drsearch_backend_lg/tests/: test_main.py
drsearch_frontend/: .env  .example.env  .gitignore  Dockerfile.frontend  README.md  docker-compose.frontend.yml  frontend_testing.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
instructions/: Instructions_Backend_API_Simulator.md
management/: plotly_project.md
pg_vector_app/: README.md  app.py  config.json  pyproject.toml  requirements.txt
test_full_app/: BACKEND_E2E_REMAINING_ISSUES.md  BACKEND_E2E_STRATEGY.md  FRONTEND_UPDATES.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  TESTING_SCRIPTS.md  TROUBLESHOOTING.md  __init__.py  (+11 more)
(+132 files in other folders)
