[project]
name = "agentic_drsearch_backend"
version = "0.1.0"
description = "The agentic backend for DRSearch app"
authors = [
  { name = "S", email = "private@email.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
  "pydantic>=2.7.1,<3.0.0",
  "uvicorn>=0.29.0,<1.0.0",
  "openai>=1.15.0,<2.0.0",
  "pgvector>=0.2.3,<0.5.0",
  "tqdm>=4.66.4,<5.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "psycopg[binary]>=3.1.12,<4.0.0",
  "fastapi (>=0.115.12,<0.116.0)",
  "pydantic-settings (>=2.9.1,<3.0.0)",
  "psycopg-pool (>=3.2.6,<4.0.0)",
  "openai-agents (>=0.0.17,<0.0.18)",
  "truststore (>=0.10.1,<0.11.0)",
  "langchain-postgres (>=0.0.14,<0.0.15)",
  "langchain-openai>=0.1.7,<0.2.0"
]

[project.optional-dependencies]
dev = [
  "black>=23.9.1,<24.0.0",
  "isort>=5.12.0,<6.0.0",
  "pytest>=8.1.1,<9.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
  "pytest-cov>=6.1.1,<7.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "starlette>=0.46.2,<1.0.0",
  "python-json-logger>=3.3.0,<4.0.0",
  "pylint>=3.1.0,<3.2.0"
]

[tool.poetry]
packages = [
  { include = "app" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
