[project]
name = "blob_app"
version = "0.1.0"
description = "An app for Azure Blob Storage"
authors = [
  { name = "S", email = "private@email.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
streamlit = "^1.45.1"
pandas = "^2.3.0"
azure-storage-blob = "^12.19.0"
truststore = "^0.10.1"
pydantic = "^1.10.17,<2.0.0"
aiohttp= "^3.12.7"
nest-asyncio = "^1.6.0"
