[tool.poetry]
name = "docextractor"
version = "0.1.0"
description = "Ingestion app for DRSearch app"
authors = ["SL <SL@email.me>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain-text-splitters= "0.0.2"
langchain= "0.1.20"
langchain-community = "0.0.38"
langchain-core = "0.1.52"
langchain-openai = "0.1.7"
huggingface-hub="0.22.2"
fastapi = "0.110.1"
nltk= "3.8.1"
numpy = "1.26.4"
openai= "1.30.1"
pandas= "2.2.1"
pdf2image= "1.17.0"
pdfplumber= "0.11.0"
pikepdf="8.14.0"
pillow="10.3.0"
pillow_heif="0.16.0"
psycopg2-binary="2.9.9"
pydantic= "2.7.0"
pydantic_core= "2.18.1"
pyodbc= "5.1.0"
pypandoc= "1.13"
pytesseract= "0.3.10"
python-docx= "1.1.0"
python-dotenv= "1.0.1"
scikit-learn= "1.5.0"
SQLAlchemy= "2.0.30"
starlette= "0.37.2"
tokenizers= "0.15.2"
transformers= "4.39.3"
truststore= "0.10.1"
unstructured= "0.13.2"
unstructured-client= "0.18.0"
unstructured-inference= "0.7.25"
"unstructured.pytesseract"= "0.3.12"
uvicorn= "0.29.0"
weaviate-client= "4.6.4"
websocket-client= "1.7.0"
websockets= "12.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
