[project]
name = "pg_vector_app"
version = "0.1.0"
description = "An app for Azure PG Vector"
authors = [
  { name = "S", email = "private@email.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.13"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
streamlit = "^1.45.1"
psycopg2-binary = "^2.9.10"
pandas = "^2.3.0"
scikit-learn = "^1.7.0"
plotly = "^6.1.2"
openai = "^1.83.0"
truststore = "^0.10.1"
sqlalchemy = "^2.0.41"
